API implementation for both below endpoints: 1. (POST) New Current Account creation for existing customer 2. (GET) Get all accounts details for existing customer
