# service/src/main/java/org/bh/bank/validator/ValidAccountAspect.java
@@ -1,0 +1,24 @@
+package org.bh.bank.validator;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+import org.bh.bank.exception.InvalidAccountException;
+import org.bh.bank.repository.AccountRepository;
+import org.springframework.stereotype.Component;
+
+@Slf4j
+@RequiredArgsConstructor
+@Aspect
+@Component
+public final class ValidAccountAspect {
+
+    private final AccountRepository accountRepository;
+
+    @Before("@annotation(org.bh.bank.validator.ValidAccount) && args(accountId, transactionType, amount)")
+    public void validate(int accountId, String transactionType, double amount) {
+        accountRepository.findByAccountId(accountId)
+                .orElseThrow(() -> new InvalidAccountException("Account does not exist for the customer to perform transaction"));
+    }
+}
